--- a/build.gradle
+++ b/build.gradle
@@ -39,3 +39,7 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+bootJar {
+    mainClass = 'com.aipersonalbackend.aipersonalbackend.AiPersonalBackendApplication'
+}
