--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.3.1'
-	id 'io.spring.dependency-management' version '1.1.5'
+	id 'org.springframework.boot' version '3.4.4'
+	id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.aipersonalbackend.aipersonalbackend'
@@ -40,6 +40,6 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-bootJar {
+springBoot {
     mainClass = 'com.aipersonalbackend.aipersonalbackend.AiPersonalBackendApplication'
 }
